--- a/macdonalds/static/assets/cartslider/style.css
+++ b/macdonalds/static/assets/cartslider/style.css
@@ -1,74 +1,83 @@
 .sidenav {
-  margin-top: 89px;
-  height: 100%;
-  max-width: 320px;
-  width: 480px;
-  position: fixed;
-  z-index: 19;
-  top: 0;
-  right: 0;
-  background-color: rgb(255, 255, 255);
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding: 60px 30px 30px 30px;
-  border-left: 1px solid rgba(0, 0, 0, 0.1);
+    margin-top: 89px;
+    height: 100vh;
+    overflow: visible auto;
+    max-width: 100vw;
+    width: 320px;
+    position: fixed;
+    z-index: 19;
+    top: 0;
+    right: 0;
+    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding: 40px 30px 30px 30px;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+
 }
 
 .closed {
-   right: -1000px;
+    right: -1000px;
 }
 
 .opened {
-  right: 0;
+    right: 0;
 }
+
 .closed a {
-   color: rgba(50, 50, 50, 0);
+    color: rgba(50, 50, 50, 0);
 }
 
 .opened a {
-  color: rgba(50, 50, 50, 1);
+    color: rgba(50, 50, 50, 1);
 }
 
 .sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  display: block;
-  transition: 0.3s;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    display: block;
+    transition: 0.3s;
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+    color: #f1f1f1;
 }
 
 .sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
 .cart-text {
-  color: #808080;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  font-family: 'Source Sans Pro', sans-serif;
-  text-align: -webkit-center;
+    color: #808080;
+    font-size: 0.9rem;
+    line-height: 1.5;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: -webkit-center;
 }
 
 .empty-cart {
-  padding: 15px 8px 15px 8px;
-  text-align: -webkit-center;
+    padding: 15px 8px 15px 8px;
+    text-align: -webkit-center;
 }
+
 .card_img {
-  height: 100px;
-  width: auto;
+    height: 100px;
+    width: auto;
 }
 
 .bottom_card {
@@ -76,4 +85,50 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+}
+
+.change_counter_countroll {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-weight: bold;
+    font-size: 0.8rem;
+}
+
+.change_counter_countroll {
+    border: 1px solid;
+    border-radius: 15px;
+    user-select: none;
+}
+
+.ctrl_style {
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    transition: all 0.2s;
+}
+
+.ctrl_style:hover {
+    cursor: pointer;
+    color: #ff6666;
+}
+.controll_minus {
+    border-left: 1px solid;
+    padding-left: 4px;
+}
+
+#cart_num2 {
+    color: rgba(255, 255, 255, 0.78);
+}
+
+.card_remove {
+    transition: all 0.2s;
+}
+
+.card_remove:hover {
+    cursor: pointer;
+    color: #ff6666;
+}
+#cart_confirm_button {
+    margin-bottom: 120px;
 }
